--- a/app/views/cadastro.html
+++ b/app/views/cadastro.html
@@ -19,4 +19,6 @@
 
             </form>
 
-            <script type="text/javascript" src="/script.js" charset="utf-8"></script>
+
+            <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+            <script type="text/javascript" src="/app/public/script/script.js" charset="utf-8"></script>
